java/java-tests/testData/ig/com/siyeh/igtest/migration/math_clamp_migration/InvalidInputs.java
class InvalidInputs {
  void ICannotCode(int input) {
    input = Math.min(<error descr="Expression expected">,</error>Math.max(5, input));
  }
}